# myanmar-tokenizer

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
Tokenizer/tools/: demo_segmentation.py
myanmar_tokenizer/: __init__.py  _syl_segment.py  _word_segment.py  segmentation.py
